--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav a:hover::before {
     width: 100%;
 }
 
-.nav_content{
+.nav_content {
     position: absolute;
     background-color: #64bab3;
     width: 140px;
@@ -96,23 +96,24 @@ nav a:hover::before {
     text-decoration: none;
     float: left;
 }
+
 .nav_content a:hover {
     color: black;
     text-decoration: underline;
 }
 
 .nav_sub {
-    display:none;
-    transition:all ease 0.4s;
+    display: none;
+    transition: all ease 0.4s;
 }
-nav ul li:nth-child(4):hover .nav_sub{
-    display:block;
-   
-    
+
+nav ul li:nth-child(4):hover .nav_sub {
+    display: block;
 }
+
 .nav_sub ul li a {
     display: inline-block;
-    width:0;
+    width: 0;
 }
 
 
@@ -192,7 +193,6 @@ P {
     transition: all ease 0.5s
 }
 
-
 #wrap_idx_box {
     width: 100%;
     margin-top: 50px;
@@ -229,18 +229,13 @@ P {
 
 .background-wrap {
     position: relative;
-    z-index: -1000;
     width: 100%;
     height: 700px;
     overflow: hidden;
-    top: 0;
-    left: 0;
 }
 
 #video-bg-elem {
     position: relative;
-    top: 0;
-    left: 0;
     min-height: 100%;
     min-width: 100%;
 }
@@ -270,6 +265,7 @@ P {
     letter-spacing: 3px;
     color: wheat;
 }
+
 .btn_more {
     position: relative;
     left: 650px;
@@ -289,36 +285,69 @@ P {
     border: solid #ff5b93 3px;
 }
 
-.gray{
+.gray {
     background-color: #f2f8fc;
 }
-.gray_a h2{
+.gray_a h2 {
     text-align: center;
-} 
-
-.box_links{
-    position: relative;
-    display:inline-block;
 }
-.boxLinksIndex-item{
+.box_links {
+    position: relative;
+    display: inline-block;
+}
+.boxLinksIndex-item {
     background-color: white;
     position: relative;
     text-align: center;
-    display:inline-block;
-    width: 300px;;
+    display: inline-block;
+    width: 300px;
+    ;
     padding: 30px;
     left: 120px;
     list-style: none;
     margin: 20px;
 }
-.boxLinksIndex-item img{
+.boxLinksIndex-item img {
     height: 300px;
     width: 300px;
 }
 
+.content_about_a {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    z-index: 1000;
+    top: 0;
+    background-size: cover;
+    background-image: url("img/landscape.jpg");
+}
+
+.content_about_a h3 {
+    position: relative;
+    top:150px;
+    text-align: center;
+    color: #ff5b93;
+    font-size: 40px;
+    margin-bottom: 10px;
+    background-color: rgba(33, 82, 88, 0.36);
+    width: 600px;
+    left: 450px;
+}
+
+.content_about_a p {
+    position: relative;
+    top:160px;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 3px;
+    color: wheat;
+    background-color: rgba(33, 82, 88, 0.36);
+}
+
+
+
 
 /*---------------------------------Footer----------------------------------------*/
-
 footer {
     position: relative;
     padding-top: 20px;
@@ -333,19 +362,19 @@ footer {
     background: linear-gradient(to bottom, #64bab3 0%, #287a82 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#64bab3', endColorstr='#287a82', GradientType=0);
 }
-
 footer p {
     text-align: center;
 }
-
 @media screen and (max-width: 768px) {
     .content h1 {
         font-size: 250%;
     }
+    
     .btn {
         font-size: 110%;
         padding: 7px 15px;
     }
+    
     #boxes .box {
         float: none;
         text-align: center;
